Correct styleline errors introduced by upgrade. Replaced usage of `word-break: break-word;` with ``` word-break: normal; overflow-wrap: break-word; ```
Source: https://rocketvalidator.com/html-validation/css-the-value-break-word-is-deprecated

Also `rgb` to `rgba` (this was done using the styleline --fix command)

--- a/app/assets/stylesheets/legacy/application.scss
+++ b/app/assets/stylesheets/legacy/application.scss
@@ -36,8 +36,8 @@ thead {
 }
 
 .text-break {
+  word-break: normal;
   overflow-wrap: break-word;
-  word-break: break-word;
 }
 
 .feedback-response-count {
