--- a/app/assets/stylesheets/legacy/calendar.scss
+++ b/app/assets/stylesheets/legacy/calendar.scss
@@ -9,7 +9,7 @@
 // written using placeholders so we can't obey the rule
 
 $datepicker-background-color: #ffffff;
-$datepicker-border-shadown-color: rgba(0, 0, 0, .1);
+$datepicker-border-shadown-color: rgb(0, 0, 0, .1);
 
 .ui-datepicker {
   background: $datepicker-background-color;
